--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Build & Publish Image
 
 on:
   push:
-    branches: [ "develop", "ci-test*" ]
+    branches: [ "develop", "ci-test*", "sus" ]
     tags: [ "v*" ]
   workflow_dispatch:
 
@@ -50,17 +50,17 @@ jobs:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2.0.0
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2.0.0
-        with:
-          username: gztime
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v2.0.0
+      #   with:
+      #     username: gztime
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Metadata action
@@ -68,8 +68,7 @@ jobs:
         id: meta
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/gzctf/gzctf
-            gztime/gzctf
+            ghcr.io/${{ github.actor }}/gzctf
           tags: |
             latest
             type=ref,event=branch
@@ -85,18 +84,18 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
 
-      - name: Prune old packages
-        uses: vlaurin/action-ghcr-prune@v0.4.0
-        with:
-          token: ${{ secrets.PACKAGE_TOKEN }}
-          container: "gzctf/gzctf"
-          dry-run: false
-          tag-regex: ^[0-9a-f]{6,40}
-          keep-tags: |
-            latest
-            main
-            develop
-          keep-tags-regexes:
-            ^v(.)*
-          keep-last: 5
-          untagged: true
+      # - name: Prune old packages
+      #   uses: vlaurin/action-ghcr-prune@v0.4.0
+      #   with:
+      #     token: ${{ secrets.PACKAGE_TOKEN }}
+      #     container: "gzctf/gzctf"
+      #     dry-run: false
+      #     tag-regex: ^[0-9a-f]{6,40}
+      #     keep-tags: |
+      #       latest
+      #       main
+      #       develop
+      #     keep-tags-regexes:
+      #       ^v(.)*
+      #     keep-last: 5
+      #     untagged: true
