--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     defaults:
       run:
         working-directory: GZCTF
+    permissions:
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
