--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,11 @@ jobs:
           VITE_APP_GIT_SHA: ${{ github.sha }}
           VITE_APP_GIT_NAME: ${{ github.ref_name }}
 
-      - run: dotnet publish "CTFServer.csproj" -c Release -o publish/linux/arm64 -r linux-arm64 --no-self-contained /p:PublishReadyToRun=true /p:UseNpm=true
-        env:
-          VITE_APP_BUILD_TIMESTAMP: ${{ steps.time.outputs.time }}
-          VITE_APP_GIT_SHA: ${{ github.sha }}
-          VITE_APP_GIT_NAME: ${{ github.ref_name }}
+      # - run: dotnet publish "CTFServer.csproj" -c Release -o publish/linux/arm64 -r linux-arm64 --no-self-contained /p:PublishReadyToRun=true /p:UseNpm=true
+      #   env:
+      #     VITE_APP_BUILD_TIMESTAMP: ${{ steps.time.outputs.time }}
+      #     VITE_APP_GIT_SHA: ${{ github.sha }}
+      #     VITE_APP_GIT_NAME: ${{ github.ref_name }}
 
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v2.0.0
@@ -65,12 +65,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to Aliyun Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: idawnlight
+          password: ${{ secrets.ALIYUN_CONTAINER_SECRET }}
+
       - name: Docker Metadata action
         uses: docker/metadata-action@v4.0.1
         id: meta
         with:
           images: |
             ghcr.io/${{ github.actor }}/gzctf
+            registry.cn-shanghai.aliyuncs.com/${{ secrets.ALIYUN_CONTAINER_NAME }}
           tags: |
             latest
             type=ref,event=branch
@@ -83,7 +91,7 @@ jobs:
           context: ./GZCTF
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
 
       # - name: Prune old packages
