--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,14 +61,14 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Docker Metadata action
         uses: docker/metadata-action@v4.0.1
         id: meta
         with:
           images: |
-            ghcr.io/${{ github.actor }}/susctf
+            ghcr.io/${{ github.actor }}/gzctf
           tags: |
             latest
             type=ref,event=branch
