--- a/GZCTF/ClientApp/package.json
+++ b/GZCTF/ClientApp/package.json
@@ -26,7 +26,7 @@
     "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
     "echarts-for-react": "^3.0.2",
-    "embla-carousel": "7.0.3",
+    "embla-carousel": "^7.0.3",
     "embla-carousel-autoplay": "^7.0.3",
     "embla-carousel-react": "^7.0.3",
     "katex": "^0.16.2",
